--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             <div class="circle">
               <a href="#" title="채용">
                 <img src="./images/ico_recru.png" alt="채용">
-                <span>RECRUITTMENT<br />채용</span>
+                <span>RECRUITMENT<br />채용</span>
               </a>
             </div>
             <div class="caption">
